--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
 asgiref==3.7.2
+cloudinary==1.36.0
 dj-database-url==0.5.0
+dj3-cloudinary-storage==0.0.6
 Django==3.2.22
 gunicorn==21.2.0
+packaging==23.2
 psycopg2==2.9.9
 pytz==2023.3.post1
 sqlparse==0.4.4
+typing_extensions==4.8.0
+urllib3==1.26.15
